# GroupTheory

./: GroupsLab2  README.md  environment.yml  pyproject.toml
.ipynb_checkpoints/: GroupsLab1-checkpoint.ipynb
.virtual_documents/notebook/: GroupsLab1.ipynb
notebook/: GroupsLab1.ipynb  GroupsLab2.ipynb  GroupsLab3.ipynb
notebook/.ipynb_checkpoints/: GroupsLab1-checkpoint.ipynb
src/power_graph.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/power_graph/core/graphs/: __init__.py  engel_graph.py  factor_graph.py  group_graph.py  power_graph.py
src/power_graph/core/groups/: __init__.py  cyclic_group.py  dihedral_group.py  gl_group.py  group.py  sl_group.py  symmetric_group.py
src/power_graph/utils/: __init__.py  kernel.py  power_checker.py
